# lead-gen

./: .gitignore  DIAGNOSTIC_REPORT.md  FINAL_SYSTEM_STATUS.md  FIXES_APPLIED.md  FIX_APPLIED.md  GETTING_STARTED.md  INSTALL_NODEJS.md  INTEGRATION_CHECK.md  LAUNCH_READINESS.md  LEADS_GENERATED.md  PHASE1_SUMMARY.md  PHASE2_FINAL_SUMMARY.md  PHASE6_COMPLETE.md  README.md  REPOSITORY_STATUS.md  SAVE_STATUS.txt  SAVE_VERIFICATION.md  docker-compose.yml
backend/: .env.example  .gitignore  __init__.py  pyproject.toml  requirements.txt
backend/src/: config.py  database.py  main.py
backend/src/analysis/: correlation_analysis.py  pattern_discovery.py
backend/src/api/: calibration.py  contractors.py  dashboard.py  delivery.py  feedback.py  leads.py  scoring.py
backend/src/features/: aggregated_features.py  feature_pipeline.py  temporal_features.py
backend/src/ingestion/: austin_311.py  austin_code_compliance.py  base_client.py  calculate_zip_tiers.py  discover_apis.py  enrich_contacts.py  ingest_historical_signals.py  link_signals_to_properties.py  noaa_storm_events.py  property_universe.py  run_phase2_complete.py  tcad_client.py  test_address_matching.py  test_data_sources.py  travis_deeds.py  validate_address_matching.py  validation.py  verify_existing_emails.py
backend/src/middleware/: error_handler.py
backend/src/models/: base.py  code_violation.py  contact_enrichment.py  contractor.py  deed_record.py  engagement.py  feedback.py  lead.py  lead_score.py  property.py  service_request.py  storm_event.py  zip_code_tier.py
backend/src/scoring/: baseline_scorer.py  (+3 more)
(+87 files in other folders)
